--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "validate-branch-name": "^1.3.1"
   },
   "dependencies": {
+    "html2pdf.js": "^0.10.2",
     "react-router-dom": "^7.1.5"
   }
 }
