--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,15 @@
     "test": "jest --verbose"
   },
   "dependencies": {
+    "@types/axios": "^0.9.36",
+    "@types/mongoose": "^5.11.96",
+    "@types/node": "^22.13.1",
+    "axios": "^1.7.9",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.0",
+    "db-migrate": "^0.11.14",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose": "^8.10.0",
     "mysql2": "^3.11.3"
   },
   "devDependencies": {
