--- a/package.json
+++ b/package.json
@@ -34,12 +34,16 @@
     "@biomejs/biome": "1.9.2",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.8",
     "concurrently": "^9.0.1",
     "husky": "^9.1.6",
     "validate-branch-name": "^1.3.1"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "html2pdf.js": "^0.10.2",
+    "jsonwebtoken": "^9.0.2",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5"
   }
